# japanese_postalcode_latlon_mapping

./: .gitignore  README.md  pyproject.toml
config/: config_sample.yaml
data/input/: prefecture_master.csv
data/output/: output_sample.csv
data/schema/: KEN_ALL_schema.json
demo/: call_api_on_kanto.py
japan_postalcode_latlon_mapping/: JapanPostcodeMapping.py  __init__.py
japan_postalcode_latlon_mapping/utils/: datatype_operation.py  file_inputoutput.py
