[tool.poetry]
name = "jp-postalcode-latlon-mapping"
version = "0.1.0"
description = ""
authors = ["RyoNak-billy <nakagamiryo0901@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
